Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,10 +4,12 @@
             Bienvenido a Hyperblog 2.0
         </title>
         <link rel="stylesheet" href="css/estilos.css"/>
+        <meta charset='UTF-8'/>
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png"/>
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
