--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <div id="container">
+        < id="container">
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
@@ -27,6 +27,9 @@
                     Suscribete y dale like
                 </p>
             </div>
+        <div id="footer">
+            Hecho con amor eb Platzi <3
+        </div>
         </div>
     </body>
 </html>
