--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        < id="container">
+        <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png"/>
                 Hyperblog
