--- a/blogpost.html
+++ b/blogpost.html
@@ -29,7 +29,7 @@
                 </p>
             </div>
         <div id="footer">
-            Hecho con amor eb Platzi <3
+            Hecho con amor en Platzi <3
         </div>
         </div>
     </body>
